maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:27: error: too many arguments for method placement: ()Unit
    while(vir!=4){vir = placement(vir)}
                                 ^