maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var vir:Int = 0
  def mur():Boolean = {
    gauche();
    if(estFaceMur()){droite();return true}
    else{droite();return false} 
  }
  
  def placement(){
  	if(mur() && !estFaceMur()){
      avance();
    }
    else if( !mur()){ gauche();avance();}
    else if( estFaceMur()){droite();}
  }
  
  def cestLeNord(){
      if(estFaceMur()){placement()}
			else{avance();}
      

  }
  

  while(!estSurBiscuit()){
    while(vir!=4){vir = placement(vir)}
    while(!estFaceMur()){avance()}
  }
  prendBiscuit()
}